syntax = "proto3";

package example05;

option java_package = "example05";
option java_multiple_files = true;
option go_package = "github.com/sagikazarmark/grpc-intro-workshop/examples/example05";

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message HelloError {
    string reason = 1;
}

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}
